--- a/LB1_codes.csproj
+++ b/LB1_codes.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LiveCharts.WinForms.NetCore3" Version="0.9.8" />
     <PackageReference Include="MaterialSkin.2.NetCore" Version="2.2.1" />
   </ItemGroup>
 
